<resources>
    <string name="app_name">ModernHorticulture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="next">next</string>
    <string name="description_1">This companion app will help you get all the information you need about growing horticultural crops.</string>
    <string name="title_1">Get information!</string>
    <string name="finish">finish</string>
    <string name="title_2">Buy and sell produce</string>
    <string name="description_2">Through this app, farmers will be linked to the market meaning they will put their products for sale so that consumers can purchase!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="farming_illustration">Farming illustration</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="full_name">Full Name</string>
    <string name="password_repeat">Repeat Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="banner_illustration">Banner illustration</string>
    <string name="dragon_fruit_desc">Dragon fruit grows on the Hylocereus cactus, also known as the Honolulu queen, whose flowers only open at night.</string>
    <string name="kiwi_fruit_desc">Kiwi and other fruits provide a range of health benefits due to their nutritional contents. Kiwis are a good source of vitamin C, antiox...</string>
    <string name="sell_fruits_desc">Put your product to market. Let buyers contact you.</string>
    <string name="continue_as_buyer">Continue as Buyer</string>
    <string name="continue_as_farmer">Continue as Farmer</string>
    <string name="lets_get_started">let\'s get started!</string>
    <string name="demo_text">Dragon fruit, also known as pitahaya or strawberry pear, is a tropical fruit known for its vibrant red skin and sweet, seed-speckled pulp.</string>
    <string name="ecological_requirements">Ecological Requirements</string>
    <string name="soil_mngt">Soil Management</string>
    <string name="how_to_plant">How to Plant</string>
    <string name="dcm">Disease Control Measures</string>
    <string name="sell_your_produce_with_us">Sell your produce with us!</string>
    <string name="phone_number">Phone Number</string>
    <string name="type_of_fruit">Type of fruit</string>
    <string name="quantity_kg">Quantity (Kg)</string>
    <string name="selling_price">Selling Price</string>
    <string name="location">Location</string>
    <string name="choose_images">Choose Images</string>
    <string name="advertise">Advertise</string>
    <string name="my_uploads">My Uploads</string>
    <string name="an_image_showing_fruits">An image showing fruits</string>
    <string name="let_s_grow_together">Let\'s grow together.</string>
    <string name="sell">Sell</string>
    <string name="category">Category</string>
    <string name="more_items_icon">More items icon</string>
</resources>