<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.farmer.HomeFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/banner_illustration"
            android:scaleType="centerCrop"
            android:src="@drawable/banner_img" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-70dp"
            android:padding="10dp"
            android:text="@string/let_s_grow_together"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/greetUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-90dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="-135dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_more"
            app:tint="@color/white"
            android:contentDescription="@string/more_items_icon" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/category_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:padding="10dp"
                android:text="@string/category"
                android:textColor="@color/green_200"
                android:textSize="24sp"
                android:textStyle="bold" />

            <include
                android:id="@+id/dragonFruit"
                layout="@layout/dragon_fruit_card" />

            <include
                android:id="@+id/kiwiFruit"
                layout="@layout/kiwi_fruit_card" />

            <TextView
                android:id="@+id/sell_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:padding="10dp"
                android:text="@string/sell"
                android:textColor="@color/green_200"
                android:textSize="24sp"
                android:textStyle="bold" />

            <include
                android:id="@+id/sell_fruits_card"
                layout="@layout/sell_fruits_card" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>