<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.farmer.SellFruitFragment">


    <ImageView
        android:id="@+id/back"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/banner_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/banner_text"
        app:tint="@color/green_500" />

    <TextView
        android:id="@+id/banner_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/sell_your_produce_with_us"
        android:textAlignment="center"
        android:textColor="@color/green_500"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_number_TIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/type_of_fruit"
        app:layout_constraintEnd_toEndOf="@+id/phone_number_TIL"
        app:layout_constraintStart_toStartOf="@+id/phone_number_TIL"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_TIL">

        <AutoCompleteTextView
            android:id="@+id/autoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/quantity_TIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/quantity_kg"
        app:layout_constraintEnd_toEndOf="@+id/menu"
        app:layout_constraintStart_toStartOf="@+id/menu"
        app:layout_constraintTop_toBottomOf="@+id/menu">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/price_TIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/selling_price"
        app:layout_constraintEnd_toEndOf="@+id/quantity_TIL"
        app:layout_constraintStart_toStartOf="@+id/quantity_TIL"
        app:layout_constraintTop_toBottomOf="@+id/quantity_TIL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/price_per_kilo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/location_TIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/location"
        app:layout_constraintEnd_toEndOf="@+id/price_TIL"
        app:layout_constraintStart_toStartOf="@+id/price_TIL"
        app:layout_constraintTop_toBottomOf="@+id/price_TIL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/image_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/choose_images"
        app:layout_constraintEnd_toEndOf="@+id/location_TIL"
        app:layout_constraintStart_toStartOf="@+id/location_TIL"
        app:layout_constraintTop_toBottomOf="@+id/location_TIL" />

    <Button
        android:id="@+id/upload_fruit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/advertise"
        app:layout_constraintEnd_toEndOf="@+id/image_selector"
        app:layout_constraintStart_toStartOf="@+id/image_selector"
        app:layout_constraintTop_toBottomOf="@+id/image_selector" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/upload_fruit"
        app:layout_constraintStart_toStartOf="@+id/upload_fruit"
        app:layout_constraintTop_toBottomOf="@+id/upload_fruit" />

</androidx.constraintlayout.widget.ConstraintLayout>